Add simple PWA1

--- a/simple/manifest.json
+++ b/simple/manifest.json
@@ -2,8 +2,8 @@
   "name": "fake-Starbucks",
   "short_name": "fake-Starbucks",
   "description": "Github Page as a Progressive Web App",
-  "scope": "/simple/",
-  "start_url": "/simple/",
+  "scope": "https://app.starbucks.com/",
+  "start_url": "https://app.starbucks.com/",
   "background_color": "#ffffff",
   "theme_color": "#ffffff",
   "display": "standalone",
