--- a/simple/manifest.json
+++ b/simple/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "Starbucks",
   "description": "Github Page as a Progressive Web App",
   "scope": "/../../",
-  "start_url": "<script>alert('XSS');</script>",
+  "start_url": "../../index.html",
   "background_color": "#ffffff",
   "theme_color": "#ffffff",
   "display": "standalone",
