--- a/simple/manifest.json
+++ b/simple/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Starbucks",
+  "name": "",
   "short_name": "Starbucks",
   "description": "Github Page as a Progressive Web App",
   "scope": "/../../",
