--- a/simple/manifest.json
+++ b/simple/manifest.json
@@ -3,9 +3,9 @@
   "short_name": "Starbucks",
   "description": "Github Page as a Progressive Web App",
   "scope": "/../../",
+  "start_url": "../../index.html",
   "background_color": "#ffffff",
   "theme_color": "#ffffff",
-  "display": "standalone",
   "icons": [
     {
       "src": "/simple/images/pwa-icon-512.png",
