--- a/simple/manifest.json
+++ b/simple/manifest.json
@@ -6,6 +6,7 @@
   "start_url": "../../index.html",
   "background_color": "#ffffff",
   "theme_color": "#ffffff",
+  "display": "minimal-ui",
   "icons": [
     {
       "src": "/simple/images/pwa-icon-512.png",
