--- a/simple/manifest.json
+++ b/simple/manifest.json
@@ -2,8 +2,8 @@
   "name": "Starbucks",
   "short_name": "Starbucks",
   "description": "Github Page as a Progressive Web App",
-  "scope": "/../../",
-  "start_url": "../../index.html",
+  "scope": "/simple/",
+  "start_url": "/simple/",
   "background_color": "#ffffff",
   "theme_color": "#ffffff",
   "display": "fullscreen",
