--- a/simple/manifest.json
+++ b/simple/manifest.json
@@ -1,17 +1,4 @@
 {
-  "name": "Starbucks",
-  "short_name": "Starbucks",
-  "description": "Github Page as a Progressive Web App",
-  "scope": "/simple/",
   "start_url": "/simple/",
-  "background_color": "#ffffff",
-  "theme_color": "#ffffff",
-  "display": "fullscreen",
-  "icons": [
-    {
-      "src": "/simple/images/pwa-icon-512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ]
+  "display": "fullscreen"
 }
