--- a/simple/manifest.json
+++ b/simple/manifest.json
@@ -1,3 +1,10 @@
 {
+  "name": "Starbucks",
+  "short_name": "Starbucks",
+  "description": "Github Page as a Progressive Web App",
+  "scope": "/simple/",
+  "start_url": "/simple",
+  "background_color": "#ffffff",
+  "theme_color": "#ffffff",
   "display": "fullscreen"
 }
