--- a/a/manifest.json
+++ b/a/manifest.json
@@ -2,8 +2,8 @@
   "name": "PWA",
   "short_name": "Starbucks",
   "description": "Github Page as a Progressive Web App",
-  "scope": "/simple/",
-  "start_url": "/simple/",
+  "scope": "/a/",
+  "start_url": "/a/",
   "background_color": "#ffffff",
   "theme_color": "#ffffff",
   "display": "fullscreen",
