--- a/a/manifest_origin.json
+++ b/a/manifest_origin.json
@@ -1,5 +1,5 @@
 {
-  "name": "PWA",
+  "name": "Starbucks",
   "short_name": "Starbucks",
   "description": "Github Page as a Progressive Web App",
   "scope": "/simple/",
